feature/SDC-37: relaciones de persona fueron creadas para estudios, experiencia y proyecto